# User-Feedback-AI-System

./: .env.example  .gitignore  README.md  more-requirements.txt  my_project_initial_requirements.md  pyproject.toml  requirements.txt
.ignore_notes/: functional-stirring-cake.md  ignore_notes.md
data/db/: feedback.db
data/mock/: app_store_reviews.csv  expected_classifications.csv  support_emails.csv
data/output/: generated_tickets.csv  metrics.csv  processing_log.csv
documentation/: agent_design.md  database_schema.md  implementation_insights.md  langgraph_pipeline.md  mcp_server.md  observability.md  project_overview.md  setup_and_usage.md  streamlit_ui.md
src/: config.py
src/agents/: bug_analyzer.py  classifier.py  csv_agent.py  feature_extractor.py  quality_critic.py  supervisor.py  ticket_creator.py
src/db/: database.py  queries.py
src/graph/: workflow.py
src/mcp_server/: server.py
src/models/: schemas.py  state.py
src/observability/: metrics.py  tracing.py
src/tools/: __init__.py  db_tools.py  mcp_tools.py
src/utils/: csv_exporter.py  csv_parser.py
streamlit_app/: app.py
streamlit_app/pages/: 1_Upload_and_Process.py  2_Dashboard.py  3_Analytics.py  4_Configuration.py
tests/: test_bug_analyzer.py  test_classifier.py  test_csv_agent.py  test_database.py  test_feature_extractor.py  test_graph_workflow.py  test_mcp_server.py  test_quality_critic.py  test_ticket_creator.py
