[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "feedback-analysis-system"
version = "0.1.0"
description = "Intelligent User Feedback Analysis and Action System"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.0.0,<2.0.0",
    "langchain>=1.0.0,<2.0.0",
    "langchain-core>=1.0.0,<2.0.0",
    "langchain-openai>=1.0.0,<2.0.0",
    "langchain-mcp-adapters>=0.2.0,<1.0.0",
    "langfuse>=3.14.0",
    "fastmcp>=2.0.0",
    "streamlit>=1.38.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "plotly>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
analytics = [
    "scikit-learn>=1.4.0",
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
